# ecb-tool

./: .gitignore  LICENSE  README.md  install_dependencies.bat  install_youtube_deps.bat  pyproject.toml  pytest.ini  requirements.txt  run_converter_tests.bat  run_converter_tests.ps1  start.bat  test_no_delete.bat
.github/: .gitignore  CONTRIBUTING.md  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-update-readme.yml  ci.yml  dependency-review.yml  release.yml
config/: ajustes_conversion.json  ajustes_subida.json  nombres.json  orden.json  rutas.json
data/: description.txt  titles.txt
docs/: ANALISIS_COMPLETO.md  ARCHITECTURE.md  ARQUITECTURA_V2.md  CHANGELOG.md  ESTRUCTURA_FINAL.md  FIXES.md  IMPROVEMENTS.md  INSTRUCCIONES_USO.md  MIGRACION.md  NAVIGATION_SYSTEM.md  NUEVA_ESTRUCTURA.md  OAUTH_UPLOAD_SYSTEM.md  PASOS_CORRECCION.md  PLAN_MIGRACION_ARCHIVOS.md  QUICKSTART.md  README_STATUS.md  RESUMEN_REFACTORIZACION.md  TESTS_CONVERTIDOR_COMPLETO.md  YOUTUBE_SETUP.md
ecb_tool/: __init__.py  main.py
ecb_tool/config/: ajustes_subida.json  app_state.json  orden.json
ecb_tool/core/: __init__.py  config.py  legacy.py  paths.py  project_manager.py  scheduler_logic.py  state_manager.py
ecb_tool/core/shared/: file_validator.py  language_manager.py  navigation.py  paths.py  queue_manager.py  screen_utils.py  theme_manager.py  validators.py
ecb_tool/data/: conversion_state.csv  upload_state.csv
ecb_tool/features/: __init__.py
ecb_tool/features/conversion/: __init__.py  converter.py  models.py  runner.py  worker.py
ecb_tool/features/settings/: __init__.py  manager.py
ecb_tool/features/translation/: service.py
ecb_tool/features/ui/: __init__.py  login_window.py  main_window.py  main_window_modern.py  splash_screen.py  style_manager.py
ecb_tool/features/ui/blocks/: conversion_control.py  conversion_progress_panel.py  counter_widget.py  counters_panel.py  ffmpeg_settings_dialog.py  mode_selector.py  modules_panel.py  oauth_dialog.py  settings_panel.py  status_panel.py  top_bar.py  upload_confirmation_dialog.py  upload_control.py  upload_settings_dialog.py  upload_settings_dialog_v2.py
ecb_tool/features/ui/components/: custom_widgets.py  media_preview.py  navigation.py
ecb_tool/features/ui/pages/: conversion_page.py  converter_page.py  history_page.py  home_page.py  project_page.py  settings_page.py  upload_page.py  uploader_page.py
ecb_tool/features/ui/pieces/: actions.py  blink_animator.py  buttons.py  progress_bar.py  runner.py  separators.py  text.py
ecb_tool/features/ui/screens/: __init__.py  ffmpeg_settings_screen.py  general_settings_screen.py  home_screen.py  upload_settings_screen.py
ecb_tool/features/upload/: __init__.py  models.py  uploader.py  worker.py
scripts/: auto_backup.py  auto_cleanup.py  auto_update_titles.py
tests/: README_CONVERTER_TESTS.md  conftest.py
tests/integration/: test_conversion_business_logic.py  test_conversion_workflow.py  test_converter_ffmpeg.py
tests/unit/: test_config.py  test_conversion.py  test_paths.py
workspace/covers/: .gitkeep
(+7 files in other folders)
